--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
   "version": 2,
-  "builds": [{ "src": "./index.js", "use": "@version/node" }],
-  "routes": [{ "src": "./(.*)", "dest": "/" }]
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@version/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "./(.*)",
+      "dest": "/sercer.js"
+    }
+  ]
 }
