--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@version/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "./(.*)",
-      "dest": "/server.js"
-    }
-  ]
+  "version": 2
 }
